Bug 1685648 - Prevent a fast fling when trying to pinch-zoom on a non-zoomable page. r=botond

This now enables two-finger fling gestures on zoomable pages too,
which helps with consistency.

Differential Revision: https://phabricator.services.mozilla.com/D164134