gfx/layers/apz/test/gtest/APZTestCommon.h
@@ -554,7 +554,8 @@ class APZCTesterBase : public ::testing::Test {
       nsTArray<uint32_t>* aAllowedTouchBehaviors = nullptr,
       nsEventStatus (*aOutEventStatuses)[4] = nullptr,
       uint64_t* aOutInputBlockId = nullptr,
-      PinchOptions aOptions = PinchOptions::LiftBothFingers);
+      PinchOptions aOptions = PinchOptions::LiftBothFingers,
+      bool aVertical = false);
 
   // Pinch with one focus point. Zooms in place with no panning
   template <class InputReceiver>
@@ -564,7 +565,8 @@ class APZCTesterBase : public ::testing::Test {
       nsTArray<uint32_t>* aAllowedTouchBehaviors = nullptr,
       nsEventStatus (*aOutEventStatuses)[4] = nullptr,
       uint64_t* aOutInputBlockId = nullptr,
-      PinchOptions aOptions = PinchOptions::LiftBothFingers);
+      PinchOptions aOptions = PinchOptions::LiftBothFingers,
+      bool aVertical = false);
 
   template <class InputReceiver>
   void PinchWithTouchInputAndCheckStatus(
@@ -836,11 +838,11 @@ void APZCTesterBase::PinchWithTouchInput(
     const RefPtr<InputReceiver>& aTarget, const ScreenIntPoint& aFocus,
     float aScale, int& inputId, nsTArray<uint32_t>* aAllowedTouchBehaviors,
     nsEventStatus (*aOutEventStatuses)[4], uint64_t* aOutInputBlockId,
-    PinchOptions aOptions) {
+    PinchOptions aOptions, bool aVertical) {
   // Perform a pinch gesture with the same start & end focus point
   PinchWithTouchInput(aTarget, aFocus, aFocus, aScale, inputId,
                       aAllowedTouchBehaviors, aOutEventStatuses,
-                      aOutInputBlockId, aOptions);
+                      aOutInputBlockId, aOptions, aVertical);
 }
 
 template <class InputReceiver>
@@ -849,12 +851,17 @@ void APZCTesterBase::PinchWithTouchInput(
     const ScreenIntPoint& aSecondFocus, float aScale, int& inputId,
     nsTArray<uint32_t>* aAllowedTouchBehaviors,
     nsEventStatus (*aOutEventStatuses)[4], uint64_t* aOutInputBlockId,
-    PinchOptions aOptions) {
+    PinchOptions aOptions, bool aVertical) {
   // Having pinch coordinates in float type may cause problems with
   // high-precision scale values since SingleTouchData accepts integer value.
   // But for trivial tests it should be ok.
-  float pinchLength = 100.0;
-  float pinchLengthScaled = pinchLength * aScale;
+  const float pinchLength = 100.0;
+  const float pinchLengthScaled = pinchLength * aScale;
+
+  const float pinchLengthX = aVertical ? 0 : pinchLength;
+  const float pinchLengthScaledX = aVertical ? 0 : pinchLengthScaled;
+  const float pinchLengthY = aVertical ? pinchLength : 0;
+  const float pinchLengthScaledY = aVertical ? pinchLengthScaled : 0;
 
   // Even if the caller doesn't care about the block id, we need it to set the
   // allowed touch behaviour below, so make sure aOutInputBlockId is non-null.
@@ -889,8 +896,10 @@ void APZCTesterBase::PinchWithTouchInput(
     SetDefaultAllowedTouchBehavior(aTarget, *aOutInputBlockId, 2);
   }
 
-  ScreenIntPoint pinchStartPoint1(aFocus.x - int32_t(pinchLength), aFocus.y);
-  ScreenIntPoint pinchStartPoint2(aFocus.x + int32_t(pinchLength), aFocus.y);
+  ScreenIntPoint pinchStartPoint1(aFocus.x - int32_t(pinchLengthX),
+                                  aFocus.y - int32_t(pinchLengthY));
+  ScreenIntPoint pinchStartPoint2(aFocus.x + int32_t(pinchLengthX),
+                                  aFocus.y + int32_t(pinchLengthY));
 
   MultiTouchInput mtiMove1 =
       MultiTouchInput(MultiTouchInput::MULTITOUCH_MOVE, 0, mcc->Time(), 0);
@@ -910,10 +919,10 @@ void APZCTesterBase::PinchWithTouchInput(
   auto stepVector = (aSecondFocus - aFocus) / numSteps;
   for (int k = 1; k < numSteps; k++) {
     ScreenIntPoint stepFocus = aFocus + stepVector * k;
-    ScreenIntPoint stepPoint1(stepFocus.x - int32_t(pinchLengthScaled),
-                              stepFocus.y);
-    ScreenIntPoint stepPoint2(stepFocus.x + int32_t(pinchLengthScaled),
-                              stepFocus.y);
+    ScreenIntPoint stepPoint1(stepFocus.x - int32_t(pinchLengthScaledX),
+                              stepFocus.y - int32_t(pinchLengthScaledY));
+    ScreenIntPoint stepPoint2(stepFocus.x + int32_t(pinchLengthScaledX),
+                              stepFocus.y + int32_t(pinchLengthScaledY));
     MultiTouchInput mtiMoveStep =
         MultiTouchInput(MultiTouchInput::MULTITOUCH_MOVE, 0, mcc->Time(), 0);
     mtiMoveStep.mTouches.AppendElement(
@@ -925,10 +934,10 @@ void APZCTesterBase::PinchWithTouchInput(
     mcc->AdvanceBy(TIME_BETWEEN_TOUCH_EVENT);
   }
 
-  ScreenIntPoint pinchEndPoint1(aSecondFocus.x - int32_t(pinchLengthScaled),
-                                aSecondFocus.y);
-  ScreenIntPoint pinchEndPoint2(aSecondFocus.x + int32_t(pinchLengthScaled),
-                                aSecondFocus.y);
+  ScreenIntPoint pinchEndPoint1(aSecondFocus.x - int32_t(pinchLengthScaledX),
+                                aSecondFocus.y - int32_t(pinchLengthScaledY));
+  ScreenIntPoint pinchEndPoint2(aSecondFocus.x + int32_t(pinchLengthScaledX),
+                                aSecondFocus.y + int32_t(pinchLengthScaledY));
 
   MultiTouchInput mtiMove2 =
       MultiTouchInput(MultiTouchInput::MULTITOUCH_MOVE, 0, mcc->Time(), 0);
